[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mount-image-guestmount"
version = "0.1.0"
description = "Disk image mounting via guestmount / libguestfs (Linux)"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10"
dependencies = ["mount-image-sudo>=0.1.0"]
authors = [{ name = "Michael Banucu", email = "michael.banucu@googlemail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Filesystems",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/MBanucu/mount-image-guestmount"
Repository = "https://github.com/MBanucu/mount-image-guestmount"

[tool.setuptools.packages.find]
where = ["."]
include = ["mount_image_guestmount*"]
